# dasher

./: .gitignore  CMakeLists.txt  configure.ac
Data/: CMakeLists.txt
Data/GUI/: CMakeLists.txt
Data/Help/: CMakeLists.txt
Data/Help/Gnome/: CMakeLists.txt
Data/alphabets/: CMakeLists.txt  alphabet.english.xml
Data/colours/: CMakeLists.txt
Data/control/: CMakeLists.txt
Data/settings/: CMakeLists.txt
Data/training/: CMakeLists.txt
Doc/: CMakeLists.txt
Doc/progress_notes/: progress_note_23apr2024.txt
Doc/user/: CMakeLists.txt
Src/: CMakeLists.txt  Makefile.am  main.cc
Src/Common/: CMakeLists.txt  round.h
Src/DasherCore/: CMakeLists.txt  CircleStartHandler.cpp  DasherInterfaceBase.cpp  TwoBoxStartHandler.cpp
Src/DasherCore/LanguageModelling/: CMakeLists.txt
Src/Gtk2/: CMakeLists.txt  dasher_editor.cpp  dasher_editor_external.h  dasher_editor_external_atspi.cpp  dasher_main.cpp
Src/rust/: CMakeLists.txt  Makefile.am
Src/rust/rust_atspi/: Cargo.toml
Src/rust/rust_test_lib/: CMakeLists.txt  Cargo.toml  Makefile.am  _build.rs
Src/rust/rust_test_lib/src/: lib.rs
po/: CMakeLists.txt  dasher.pot
